--- a/local.yml
+++ b/local.yml
@@ -1,15 +1,46 @@
 - hosts: localhost
   become: true
+  pre_tasks:
+    - name: Update cache
+      apt:
+        update_cache: true
+      tags:
+        - zsh
+        - node
   tasks:
   - name: Install zsh
     apt: name=zsh
+    tags: 
+      - zsh
   - name: Change default shell to zsh
     shell: chsh -s `which zsh`
+    tags: 
+      - zsh
   - name: Install ohmyzsh
     shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+    tags: 
+      - zsh
   - name: Install zsh-syntax-highlighting plugin
     git:
       repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
       dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+    tags: 
+      - zsh
   - name: Update .zshrc
     shell: sed -i 's/(git/(git zsh-syntax-highlighting/' ~/.zshrc
+    tags: 
+      - zsh
+  - name: Install node
+    apt: name=nodejs,npm
+    tags: 
+      - node
+  - name: Install n package globally.
+    npm:
+      name: n
+      global: yes
+    tags: 
+      - node
+  - name: use node14
+    shell: n 14
+    tags: 
+      - node
